--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     		</div>
 
     		<div class="foto">
-    			<img src="img/Printer.jpg">
+    			<img src="img/printer.jpg">
     			<h1>Printer</h1>
     			<p>Harga 1.5 jt</p>
     			<a href=''>Beli Sekarang</a>
